samples/_failures_safe/1761433900_ae533a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad85bf0c.c: In function ‘main’:
./samples/SAFE/__tmp_ad85bf0c.c:168:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  168 |     struct Token final_token
      |            ^~~~~
./samples/SAFE/__tmp_ad85bf0c.c:168:12: error: expected declaration or statement at end of input
